tests/paczka1/fuzzy1/46528409.err
Error in line 2: asxRcg A667 52,7
Error in line 26: xyThTOFu A718 48,1
